# University-works

./: .gitmodules  README.md
sem2/PIVO/Laba3/: laba1.tex
sem3/PPOIS/Multiset/: Multiset.cpp  main.cpp  main.h
sem3/PPOIS/RR/: README.md
sem3/PPOIS/lab1/: mainpage.dox
sem3/PPOIS/lab1/Multiset/: CMakeLists.txt  Multiset.cpp  Multiset.h  MultisetTests.cpp  main.cpp  main.h  mainpage_multiset.dox  run_lab.sh  run_tests.sh
sem3/PPOIS/lab1/PostMachine/: CMakeLists.txt  Menu.cpp  Menu.h  PostMachine.cpp  PostMachine.h  PostMachineCommand.cpp  PostMachineCommand.h  PostMachineTape.cpp  PostMachineTape.h  PostMachineTests.cpp  main.cpp  mainpage_postmachine.dox
sem3/PPOIS/lab2/: README.md
sem3/PPOIS/lab2/DocumentFlow/: CMakeLists.txt
sem3/PPOIS/lab2/DocumentFlow/app/: main.cpp
sem3/PPOIS/lab2/DocumentFlow/modules/core/include/: Auditlogger.h  ConfigLoader.h  Deserializer.h  DocumentBase.h  FlowController.h  SecurityManager.h  Serializer.h  StorageManager.h  Validator.h  WorkflowEngine.h
sem3/PPOIS/lab2/DocumentFlow/modules/core/src/: Auditlogger.cpp  ConfigLoader.cpp  Deserializer.cpp  DocumentBase.cpp  FlowController.cpp  SecurityManager.cpp  Serializer.cpp  StorageManager.cpp  Validator.cpp  WorkflowEngine.cpp
sem3/PPOIS/lab2/DocumentFlow/modules/documents/include/: Agreement.h  Application.h  Certificate.h  Checklist.h  Contract.h  Invoice.h  Letter.h  Memo.h  Order.h  Policy.h  Protocol.h  Report.h  RequestForm.h  Resolution.h  Specification.h
sem3/PPOIS/lab2/DocumentFlow/modules/documents/src/: Agreement.cpp  Application.cpp  Certificate.cpp  Checklist.cpp  Contract.cpp  Invoice.cpp  Letter.cpp  Memo.cpp  Order.cpp  Policy.cpp  Protocol.cpp  Report.cpp  RequestForm.cpp  Resolution.cpp  Specification.cpp
sem3/PPOIS/lab2/DocumentFlow/modules/exceptions/include/: AuditExcaption.h  ConfigException.h  DeserializerException.h  DocumentException.h  FileException.h  NetworkException.h  SecurityException.h  SerializerException.h  StorageException.h  UserException.h  ValidationException.h  WorkflowException.h
sem3/PPOIS/lab2/DocumentFlow/modules/exceptions/src/: AuditException.cpp  ConfigException.cpp  DeserializerException.cpp  DocumentException.cpp  FileException.cpp  NetworkException.cpp  SecurityException.cpp  SerializerException.cpp  StorageException.cpp  UserException.cpp  ValidationException.cpp  WorkflowException.cpp
sem3/PPOIS/lab2/DocumentFlow/modules/personnel/include/: Auditor.h  Contractor.h  DepartmentHead.h  Director.h  Employee.h  ExternalUser.h  HRManager.h  ITSupport.h  Manager.h  Secretary.h
sem3/PPOIS/lab2/DocumentFlow/modules/personnel/src/: Auditor.cpp  Contractor.cpp  DepartmentHead.cpp  Director.cpp  Employee.cpp  ExternalUser.cpp  HRManager.cpp  ITSupport.cpp  Manager.cpp  Secretary.cpp
sem3/PPOIS/lab2/DocumentFlow/modules/utils/include/: DateUtils.h  FileHelper.h  StringUtils.h
sem3/PPOIS/lab2/DocumentFlow/modules/utils/src/: DateUtils.cpp  FileHelper.cpp  StringUtils.cpp
sem3/PPOIS/lab2/DocumentFlow/tests/: DocumentFlowTests.cpp
sem4/PPOIS/lab1/: README.md
sem4/PPOIS/lab1/ship_model/: __init__.py  crew.py  enums.py  exceptions.py  main.py  ship.py  subsystems.py
sem4/PPOIS/lab1/tests/: conftest.py  test_crew.py  test_ship.py  test_subsystems.py
sem4/PPOIS/lab2/: README.md
sem4/PPOIS/lab2/tournaments_app/: controller.py  main.py  model.py  test_data.py  view.py  xml_handler.py
sem4/PPOIS/lab2/tournaments_app/data/: tournament_data_1.xml  tournament_data_2.xml  tournament_data_3.xml  tournament_data_4.xml  tournament_data_5.xml
